chore(ci): Upload build artifacts
Co-authored-by: Gemini 3 Flash Preview
Signed-off-by: Stefan Niedermann <info@niedermann.it>