@@ -11,6 +11,15 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(26)
     }
+    modularity.inferModulePath.set(false)
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir("src/main/resources")
+        }
+    }
 }
 
 application {
@@ -23,10 +32,16 @@ javafx {
 }
 
 jlink {
-    options = listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages")
+    moduleName.set("it.niedermann.nextcloud.deck.javafx")
+    mergedModuleName.set("it.niedermann.nextcloud.deck.javafx")
+    options.set(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"))
     launcher {
         name = "Deck PC"
-        jvmArgs = listOf("--add-modules javafx.controls,javafx.fxml")
+    }
+    mergedModule {
+        additive = true
+        forceMerge("jna")
+        forceMerge("javafx")
     }
 }
 
@@ -59,9 +74,14 @@ dependencies {
     implementation(libs.ikonli.javafx)
     implementation(libs.gemsfx)
     implementation(libs.ikonli.fluentui)
-    implementation(libs.jsystemthemedetector)
+    implementation(libs.jsystemthemedetector) {
+        exclude(group = "net.java.dev.jna", module = "jna-platform")
+    }
 
-    implementation(libs.jpro.mdfx)
+    implementation(libs.jpro.mdfx) {
+        exclude(group = "org.openjfx", module = "jfx-incubator-input")
+        exclude(group = "org.openjfx", module = "jfx-incubator-richtext")
+    }
 
     testImplementation(platform(libs.junitBom))
     testImplementation(libs.junitJupiter)
@@ -79,12 +99,4 @@ tasks.named<Tar>("distTar") {
 
 tasks.withType<AbstractArchiveTask>().configureEach {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-}
-
-tasks.withType<JavaExec> {
-    jvmArgs = listOf(
-        "--module-path", configurations.runtimeClasspath.get().asPath,
-        "--add-modules", "javafx.controls,javafx.fxml",
-        "--enable-native-access", "javafx.graphics,ALL-UNNAMED"
-    )
 }
